Fixed image size when sidebar collapsed

--- a/home/sidebar.css
+++ b/home/sidebar.css
@@ -25,7 +25,20 @@
     width: 7rem;
 }
 
+.user-panel .image {
+    padding-left: 0;
+}
+
+.sidebar-mini.sidebar-collapse .main-sidebar .user-panel .image img {
+    width: 2.1rem;
+}
+
 .user-panel .info {
     margin-top: 4%;
 }
 
+.user-panel, .user-panel .info {
+    overflow: hidden;
+    white-space: nowrap;
+    text-align: center;
+}
